--- a/config/database.yml
+++ b/config/database.yml
@@ -17,8 +17,8 @@ development:
   encoding: unicode
   database: one_hundred_motels_development
   pool: 5
-  username: seo
-  password: seocahill
+  username: postgres
+  password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
