--- a/config/database.yml
+++ b/config/database.yml
@@ -46,13 +46,13 @@ test: &test
   username: postgres
   password:
 
-# production:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: one_hundred_motels_production
-#   pool: 5
-#   username: seo
-#   password: seocahill
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: one_hundred_motels_production
+  pool: 5
+  username: seo
+  password: seocahill
 
 cucumber:
   <<: *test
