--- a/config/database.yml
+++ b/config/database.yml
@@ -16,6 +16,14 @@ test: &test
   username: postgres
   password:
 
+staging:
+  adapter: postgresql
+  encoding: unicode
+  database: one_hundred_motels_production
+  pool: 5
+  username: postgres
+  password:
+
 production:
   adapter: postgresql
   encoding: unicode
