db config for staging

--- a/config/database.yml
+++ b/config/database.yml
@@ -16,21 +16,21 @@ test: &test
   username: postgres
   password:
 
-# staging:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: one_hundred_motels_development
-#   pool: 5
-#   username: postgres
-#   password:
+staging:
+  adapter: postgresql
+  encoding: unicode
+  database: one_hundred_motels_development
+  pool: 5
+  username: #postgres
+  password:
 
-# production:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: one_hundred_motels_production
-#   pool: 5
-#   username: <%= ENV['PG_ADMIN'] %>
-#   password: <%= ENV['PG_PASSWORD'] %>
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: one_hundred_motels_production
+  pool: 5
+  username: #<%= ENV['PG_ADMIN'] %>
+  password: #<%= ENV['PG_PASSWORD'] %>
 
 cucumber:
   <<: *test
