--- a/config/database.yml
+++ b/config/database.yml
@@ -8,7 +8,7 @@ development:
   username: postgres
   password:
 
-test: &test
+test:
   adapter: postgresql
   encoding: unicode
   database: one_hundred_motels_test
@@ -21,7 +21,7 @@ staging:
   encoding: unicode
   database: one_hundred_motels_development
   pool: 5
-  username: #postgres
+  username:
   password:
 
 production:
@@ -29,6 +29,6 @@ production:
   encoding: unicode
   database: one_hundred_motels_production
   pool: 5
-  username: #<%= ENV['PG_ADMIN'] %>
-  password: #<%= ENV['PG_PASSWORD'] %>
+  username:
+  password:
 
