--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,41 +1,57 @@
 ---
-blue.png: blue-9d2abe8696e5786679704d5f9619c62a.png
-facebook.png: facebook-390c802350d9bba09752918debb5e566.png
-rss.png: rss-3d8aff263945ff9028575d807b558d37.png
-twitter.png: twitter-f100018153bd256ea8f0f0dd85b4b560.png
-vimeo.png: vimeo-85b47a7bf188d87f0a5b545e1aff9ac2.png
-application.js: application-23066813871f42d658e75ab9831f2311.js
-mercury.js: mercury-ba883b9a5822a982565e8d0268921633.js
-application.css: application-49b428035ed191f06fea2e83863a6f31.css
-mercury.css: mercury-0d1830b020d14248eab632ff2f6974ba.css
-doorkeeper/application.js: doorkeeper/application-ccab98dc1abdf097c0af693e20aed861.js
-doorkeeper/application.css: doorkeeper/application-c15195d41f3c95b8cb39e530a9b83296.css
-mercury/button.png: mercury/button-77dc9da26371196f3f52d47e01ccf60b.png
-mercury/close.png: mercury/close-6eb51d999a4b569094631875cfc031a3.png
-mercury/default-snippet.png: mercury/default-snippet-cb22d06900274a955933ea58bf4b7d87.png
-mercury/loading-dark.gif: mercury/loading-dark-64149ac309be6824798fbd8bf417f5f8.gif
-mercury/loading-light.gif: mercury/loading-light-df277a01003979c6a0557542eed7e8e2.gif
-mercury/missing-image.png: mercury/missing-image-e5ab6d3db9c278bf7200e43d44284bdc.png
-mercury/search-icon.png: mercury/search-icon-a99f5d5f7ae7cacbd6bf6882c3967e76.png
-mercury/temp-logo.png: mercury/temp-logo-98d35196b8f431595367db23af37719e.png
-mercury/toolbar/editable/buttons.png: mercury/toolbar/editable/buttons-7db84e210be36745976cf7e3f6088c57.png
-mercury/toolbar/primary/_expander.png: mercury/toolbar/primary/_expander-213a93a9be0ff522371fdffe8943bd7c.png
-mercury/toolbar/primary/_pressed.png: mercury/toolbar/primary/_pressed-02abb0127152625d9f603f03a2830a09.png
-mercury/toolbar/primary/action.png: mercury/toolbar/primary/action-bba6c509cb8902bdafa1d53715ac9073.png
-mercury/toolbar/primary/historypanel.png: mercury/toolbar/primary/historypanel-da03439abb9aca20890cbf44ba9b0ae8.png
-mercury/toolbar/primary/insertcharacter.png: mercury/toolbar/primary/insertcharacter-03f4b30c18be6ef1c3231f587032ae8b.png
-mercury/toolbar/primary/insertlink.png: mercury/toolbar/primary/insertlink-c8f35356483aae81c65db82cf666e965.png
-mercury/toolbar/primary/insertmedia.png: mercury/toolbar/primary/insertmedia-a17c71afc9b537bcd5795e3e0e186dd2.png
-mercury/toolbar/primary/inserttable.png: mercury/toolbar/primary/inserttable-7c14c1667aa8e1350897306fc758a0f0.png
-mercury/toolbar/primary/inspectorpanel.png: mercury/toolbar/primary/inspectorpanel-79087cdb5269f19a7a9bf4b0b0ba5d46.png
-mercury/toolbar/primary/notespanel.png: mercury/toolbar/primary/notespanel-ffb5a3e3e282a6f730c25f0468eab3c6.png
-mercury/toolbar/primary/preview.png: mercury/toolbar/primary/preview-0f3f71b87151d2feccb04ad072f2a9d9.png
-mercury/toolbar/primary/redo.png: mercury/toolbar/primary/redo-e6f15c68da2ad1e1e219fa59743d0468.png
-mercury/toolbar/primary/save.png: mercury/toolbar/primary/save-a45e43706db5282ca1895e42897c0cae.png
-mercury/toolbar/primary/snippetpanel.png: mercury/toolbar/primary/snippetpanel-9ee0f575d5cc8d2c591b940391edbc17.png
-mercury/toolbar/primary/tools.png: mercury/toolbar/primary/tools-4b7f314d387e9ce0d0cb26f63b36be2f.png
-mercury/toolbar/primary/undo.png: mercury/toolbar/primary/undo-198778b2ef78a08960304c9489fc37c3.png
-mercury/toolbar/primary/user.png: mercury/toolbar/primary/user-bd7bd3279893e7c68fb6077d317ff4a2.png
-mercury/toolbar/snippets/buttons.png: mercury/toolbar/snippets/buttons-1332f1dd5f0a4737cbaac7553128ae91.png
-glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
-glyphicons-halflings.png: glyphicons-halflings-ab3144065a860d198f1d7d9a4882640c.png
+tex2res5.png: tex2res5-fd56b8b1bbe2729da4224dcc597892e5.png
+tex2res5/index.png: tex2res5-fd56b8b1bbe2729da4224dcc597892e5.png
+weave.png: weave-6bdabf72ccf7c3aef72772d97dd220aa.png
+weave/index.png: weave-6bdabf72ccf7c3aef72772d97dd220aa.png
+application.js: application-34c7c4420546e43aa80016b537ad4989.js
+application/index.js: application-34c7c4420546e43aa80016b537ad4989.js
+application.css: application-40424e2647f9b4b00189d368e2b483b6.css
+application/index.css: application-40424e2647f9b4b00189d368e2b483b6.css
+images/animated-overlay.gif: images/animated-overlay-602eee4c79a4796b02bb6442948c9e28.gif
+images/animated-overlay/index.gif: images/animated-overlay-602eee4c79a4796b02bb6442948c9e28.gif
+images/ui-bg_flat_0_aaaaaa_40x100.png: images/ui-bg_flat_0_aaaaaa_40x100-0a0c01afa3824a91aafb08bdd6bb6f24.png
+images/ui-bg_flat_0_aaaaaa_40x100/index.png: images/ui-bg_flat_0_aaaaaa_40x100-0a0c01afa3824a91aafb08bdd6bb6f24.png
+images/ui-bg_flat_75_ffffff_40x100.png: images/ui-bg_flat_75_ffffff_40x100-24f1e45ddd6627c92524b5b0c51a16b9.png
+images/ui-bg_flat_75_ffffff_40x100/index.png: images/ui-bg_flat_75_ffffff_40x100-24f1e45ddd6627c92524b5b0c51a16b9.png
+images/ui-bg_glass_55_fbf9ee_1x400.png: images/ui-bg_glass_55_fbf9ee_1x400-d57a20841d1ec19d83e7b49fd892a67c.png
+images/ui-bg_glass_55_fbf9ee_1x400/index.png: images/ui-bg_glass_55_fbf9ee_1x400-d57a20841d1ec19d83e7b49fd892a67c.png
+images/ui-bg_glass_65_ffffff_1x400.png: images/ui-bg_glass_65_ffffff_1x400-a6be59b38bdf5964c41eedbb6939bca0.png
+images/ui-bg_glass_65_ffffff_1x400/index.png: images/ui-bg_glass_65_ffffff_1x400-a6be59b38bdf5964c41eedbb6939bca0.png
+images/ui-bg_glass_75_dadada_1x400.png: images/ui-bg_glass_75_dadada_1x400-544fda4ed8990b706c9528eda8e0c5c2.png
+images/ui-bg_glass_75_dadada_1x400/index.png: images/ui-bg_glass_75_dadada_1x400-544fda4ed8990b706c9528eda8e0c5c2.png
+images/ui-bg_glass_75_e6e6e6_1x400.png: images/ui-bg_glass_75_e6e6e6_1x400-0b1da6a432e6fd12229633922ce79f14.png
+images/ui-bg_glass_75_e6e6e6_1x400/index.png: images/ui-bg_glass_75_e6e6e6_1x400-0b1da6a432e6fd12229633922ce79f14.png
+images/ui-bg_glass_95_fef1ec_1x400.png: images/ui-bg_glass_95_fef1ec_1x400-95a826225c2c35b62c7e66c512a31b0d.png
+images/ui-bg_glass_95_fef1ec_1x400/index.png: images/ui-bg_glass_95_fef1ec_1x400-95a826225c2c35b62c7e66c512a31b0d.png
+images/ui-bg_highlight-soft_75_cccccc_1x100.png: images/ui-bg_highlight-soft_75_cccccc_1x100-bb257b72d684b4b3413193a0a2c99464.png
+images/ui-bg_highlight-soft_75_cccccc_1x100/index.png: images/ui-bg_highlight-soft_75_cccccc_1x100-bb257b72d684b4b3413193a0a2c99464.png
+images/ui-icons_222222_256x240.png: images/ui-icons_222222_256x240-0675a996f0bdc78890f7b312c543b06a.png
+images/ui-icons_222222_256x240/index.png: images/ui-icons_222222_256x240-0675a996f0bdc78890f7b312c543b06a.png
+images/ui-icons_2e83ff_256x240.png: images/ui-icons_2e83ff_256x240-6aea736f81a417977efd77f183519a54.png
+images/ui-icons_2e83ff_256x240/index.png: images/ui-icons_2e83ff_256x240-6aea736f81a417977efd77f183519a54.png
+images/ui-icons_454545_256x240.png: images/ui-icons_454545_256x240-6f4361f45745fb0cd7b0cc2851dc1cc3.png
+images/ui-icons_454545_256x240/index.png: images/ui-icons_454545_256x240-6f4361f45745fb0cd7b0cc2851dc1cc3.png
+images/ui-icons_888888_256x240.png: images/ui-icons_888888_256x240-8f6818bd8631ba3489de718e26c7e6cf.png
+images/ui-icons_888888_256x240/index.png: images/ui-icons_888888_256x240-8f6818bd8631ba3489de718e26c7e6cf.png
+images/ui-icons_cd0a0a_256x240.png: images/ui-icons_cd0a0a_256x240-2969ddba6d0a9c62603a4aa85a363cda.png
+images/ui-icons_cd0a0a_256x240/index.png: images/ui-icons_cd0a0a_256x240-2969ddba6d0a9c62603a4aa85a363cda.png
+doorkeeper/application.js: doorkeeper/application-fd89e4bf6103607baa6d4179300ba6f8.js
+doorkeeper/application/index.js: doorkeeper/application-fd89e4bf6103607baa6d4179300ba6f8.js
+doorkeeper/application.css: doorkeeper/application-d167cccff2d070558a86f25fc5ce453f.css
+doorkeeper/application/index.css: doorkeeper/application-d167cccff2d070558a86f25fc5ce453f.css
+jquery.min.map: jquery.min-8b58c0fbf303b938d8e749262f7e50dd.map
+jquery/index.min.map: jquery.min-8b58c0fbf303b938d8e749262f7e50dd.map
+FontAwesome.otf: FontAwesome-d2e1f2cb067bb8a9b129341f5ed85582.otf
+FontAwesome/index.otf: FontAwesome-d2e1f2cb067bb8a9b129341f5ed85582.otf
+fontawesome-webfont.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
+fontawesome-webfont/index.eot: fontawesome-webfont-009f6d1f667cc42c25e712ab3429cbc7.eot
+fontawesome-webfont.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
+fontawesome-webfont/index.svg: fontawesome-webfont-f1c2889911d212e1403b68eabc1a3a56.svg
+fontawesome-webfont.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
+fontawesome-webfont/index.ttf: fontawesome-webfont-fb7a72c810ec644f3c26dcca68638308.ttf
+fontawesome-webfont.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
+fontawesome-webfont/index.woff: fontawesome-webfont-b4d67f1e5651506c3e80d842ee67d6ba.woff
+glyphicons-halflings-white.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+glyphicons-halflings-white/index.png: glyphicons-halflings-white-6cccd17a7aed91dbc0157d343c68c0d9.png
+glyphicons-halflings.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
+glyphicons-halflings/index.png: glyphicons-halflings-2851b489e8c39f8fad44fc10efb99c3e.png
