--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,6 @@
 ---
+ranelag.gif: ranelag-9c36759f5e18761051b80151c10aa94f.gif
+ranelag/index.gif: ranelag-9c36759f5e18761051b80151c10aa94f.gif
 tex2res5.png: tex2res5-fd56b8b1bbe2729da4224dcc597892e5.png
 tex2res5/index.png: tex2res5-fd56b8b1bbe2729da4224dcc597892e5.png
 weave.png: weave-6bdabf72ccf7c3aef72772d97dd220aa.png
