--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,8 @@ development:
   pool: 5
   username: postgres
   password:
+  host: localhost
+  port: 5432
 
 test:
   adapter: postgresql
@@ -15,6 +17,8 @@ test:
   pool: 5
   username: postgres
   password:
+  host: localhost
+  port: 5432
 
 production:
   adapter: postgresql
