--- a/config/database.yml
+++ b/config/database.yml
@@ -25,8 +25,7 @@ production:
   encoding: unicode
   database: one_hundred_motels_production
   pool: 5
-  username: postgres
+  username:
   password:
-  host: localhost
-  port: 5432
+
 
