--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,15 @@
- # PostgreSQL. Versions 8.2 and up are supported.
+#  development: &default
+#   adapter: postgresql
+#   database: one_hundred_motels_development
+#   min_messages: WARNING
+#   pool: 5
+#   username: postgres
+#   host: <%= ENV['DB_1_PORT_5432_TCP_ADDR'] %>
+#   port: <%= ENV['DB_1_PORT_5432_TCP_PORT'] %>
+
+# test:
+#   <<: *default
+#   database: one_hundred_motels_test
 
 development:
   adapter: postgresql
