--- a/config/database.yml
+++ b/config/database.yml
@@ -30,9 +30,9 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: one_hundred_motels_production
+  database: one_hundred_motels_development
   pool: 5
-  username:
-  password:
+  host: localhost
+  port: 5432
 
 
