--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ addons:
   postgresql: '9.3'
 before_install:
 - openssl aes-256-cbc -K $encrypted_ed71510513a1_key -iv $encrypted_ed71510513a1_iv
+  -in id_rsa.enc -out id_rsa -d
+- openssl aes-256-cbc -K $encrypted_ed71510513a1_key -iv $encrypted_ed71510513a1_iv
   -in id_travis_rsa.pem.enc -out id_travis_rsa.pem -d
 before_script:
 - cp config/database.yml.travis config/database.yml
@@ -20,4 +22,3 @@ after_success:
 - ssh-add .travis/id_travis_rsa.pem
 - git remote add deploy dokku@100motels.com:100motels.com
 - git push deploy
-
