--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,18 @@ rvm:
 - 2.2.0
 addons:
   postgresql: '9.3'
-before_install:
-- openssl aes-256-cbc -K $encrypted_ed71510513a1_key -iv $encrypted_ed71510513a1_iv
-  -in id_rsa.enc -out id_rsa -d
 before_script:
 - cp config/database.yml.travis config/database.yml
 - psql -c 'create database travis_ci_test;' -U postgres
-- echo -e "Host heroku.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-- echo -e "Host 100motels.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 script:
 - bundle exec rake db:migrate RAILS_ENV=test
 - bundle exec rake test
 after_success:
-- chmod 600 .travis/id_rsa
-- ssh-add .travis/id_rsa
+- chmod 600 id_rsa
+- mv id_rsa ~/.ssh/id_rsa
 - git remote add deploy dokku@100motels.com:100motels.com
 - git push deploy
+before_install:
+- echo -e "Host 100motels.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+- openssl aes-256-cbc -K $encrypted_ed71510513a1_key -iv $encrypted_ed71510513a1_iv
+- in id_rsa.enc -out id_rsa -d
