--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,15 @@ addons:
 before_script:
 - cp config/database.yml.travis config/database.yml
 - psql -c 'create database travis_ci_test;' -U postgres
-- echo -e "Host 100motels.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 script:
 - bundle exec rake db:migrate RAILS_ENV=test
 - bundle exec rake test
 after_success:
+- chmod 600 id_travis
 - mv id_travis ~/.ssh/id_rsa
-- cat id_rsa
-- chmod 600 ~/.ssh/id_rsa
 - git remote add deploy dokku@100motels.com:100motels.com
 - git push deploy
 before_install:
+- echo -e "Host 100motels.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 - openssl aes-256-cbc -K $encrypted_ed71510513a1_key -iv $encrypted_ed71510513a1_iv
-  -in id_travis.enc -out id_travis -d
+  -in id_travis_rsa.enc -out id_travis -d
