--- a/config/database.yml
+++ b/config/database.yml
@@ -1,38 +1,12 @@
-#  development: &default
-#   adapter: postgresql
-#   database: one_hundred_motels_development
-#   min_messages: WARNING
-#   pool: 5
-#   username: postgres
-#   host: <%= ENV['DB_1_PORT_5432_TCP_ADDR'] %>
-#   port: <%= ENV['DB_1_PORT_5432_TCP_PORT'] %>
-
-# test:
-#   <<: *default
-#   database: one_hundred_motels_test
-
-development:
+development: &default
   adapter: postgresql
   encoding: unicode
-  database: one_hundred_motels_development
+  database: motels_development
   pool: 5
-  host: localhost
-  port: 5432
+  username: postgres
+  password:
+  host: db
 
 test:
-  adapter: postgresql
-  encoding: unicode
-  database: one_hundred_motels_test
-  pool: 5
-  host: localhost
-  port: 5432
-
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: one_hundred_motels_development
-  pool: 5
-  host: localhost
-  port: 5432
-
-
+  <<: *default
+  database: motels_test
