--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,17 @@
-version: '2'
+version: '3'
 services:
   redis:
     image: redis:alpine
     ports:
       - '6379:6379'
+    volumes:
+     - motels-redis:/var/lib/redis/data
   db:
     image: postgres:9.4
+    ports:
+        - '5432:5432'
+    volumes:
+      - motels-postgres:/var/lib/postgresql/data
   web:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -18,4 +24,7 @@ services:
       - redis
     env_file:
       - .rails.env
+volumes:
+  motels-redis:
+  motels-postgres:
 
