--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     volumes:
       - motels-postgres:/var/lib/postgresql/data
   web:
-    build: .
+    image: seocahill/ruby-rails:2.2.0
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       - .:/myapp
