--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,9 @@ before_script:
   - gem install bundler --no-ri --no-rdoc
   - bundle install --jobs $(nproc)  "${FLAGS[@]}"
 
-rspec:
+minitest:
   script:
-    - bundle exec rspec
+    - bundle exec test
 
 rubocop:
   script:
