--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,10 @@ services:
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       - .:/app
+      - ./tmp:/tmp
     ports:
-      - "3000:3000"
+      - '3000:3000'
+      - '9664:9664'
     depends_on:
       - db
       - redis
