--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,22 @@
-language: ruby
-cache: bundler
-rvm:
-  - 2.2.7
+dist: trusty
+sudo: required
+
 services:
-  - postgresql
+  - docker
+
 addons:
-  postgresql: '9.6'
   code_climate:
     repo_token: 7c36f361698781d36b23e8157a68609ca06d4c231658791c6c1d9f4a7e9541dd
-before_script:
-- cp config/database.yml.travis config/database.yml
-- psql -c 'create database travis_ci_test;' -U postgres
-script:
-- bundle exec rake db:schema:load RAILS_ENV=test
-- bundle exec rake test
-after_success:
-- chmod 600 id_travis
-- mv id_travis ~/.ssh/id_rsa
+
 before_install:
-- openssl aes-256-cbc -K $encrypted_ed71510513a1_key -iv $encrypted_ed71510513a1_iv -in id_travis_rsa.enc -out id_travis -d
+  - chmod 600 id_travis
+  - mv id_travis ~/.ssh/id_rsa
+  - openssl aes-256-cbc -K $encrypted_ed71510513a1_key -iv $encrypted_ed71510513a1_iv -in id_travis_rsa.enc -out id_travis -d
+
+before_script:
+  - docker-compose build
+
+script:
+  - docker-compose run web bin/rake db:create db:schema:load RAILS_ENV=test
+  - docker-compose run web bin/rake test
+
