--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - chmod 600 id_travis
   - mv id_travis ~/.ssh/id_rsa
 
-before_script:
+install:
   - docker-compose build
 
 script:
