--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ before_install:
   - mv id_travis ~/.ssh/id_rsa
 
 install:
-  - docker-compose -f test/docker-compose.yml build
+  - docker-compose -f docker-compose.test.yml build
 
 script:
-  - docker-compose -f test/docker-compose.yml run web bin/rake db:create db:schema:load RAILS_ENV=test
-  - docker-compose -f test/docker-compose.yml run web bin/rake test
+  - docker-compose -f docker-compose.test.yml run web bin/rake db:create db:schema:load RAILS_ENV=test
+  - docker-compose -f docker-compose.test.yml run web bin/rake test
 
