--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,9 @@ install:
   - docker-compose -f docker-compose.test.yml build
 
 before_script:
-  - docker-compose -f docker-compose.test.yml run db psql -c 'create database motels_test;' -U postgres
+  - docker-compose -f docker-compose.test.yml up -d
+  - docker ps 
+  - docker-compose -f docker-compose.test.yml run web bin/rake db:create RAILS_ENV=test
   - docker-compose -f docker-compose.test.yml run web bin/rake db:schema:load RAILS_ENV=test
 
 script:
