need to explicitly declare environment varialbles sincle I'm not using an env file in travis

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -11,6 +11,11 @@ services:
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
       - .:/app
+    environment:
+      - FILEPICKER_API_KEY=${FILEPICKER_API_KEY}
+      - STRIPE_PUBLIC_KE=${STRIPE_PUBLIC_KE}
+      - STRIPE_API_KEY=${STRIPE_API_KEY}
+      - STRIPE_PLATFORM_CLIENT_ID=${STRIPE_PLATFORM_CLIENT_ID}
     depends_on:
       - db
       - redis
