--- a/.travis.yml
+++ b/.travis.yml
@@ -8,20 +8,14 @@ addons:
   code_climate:
     repo_token: 7c36f361698781d36b23e8157a68609ca06d4c231658791c6c1d9f4a7e9541dd
 
-before_install:
-  - openssl aes-256-cbc -K $encrypted_ed71510513a1_key -iv $encrypted_ed71510513a1_iv -in id_travis_rsa.enc -out id_travis -d
-  - chmod 600 id_travis
-  - mv id_travis ~/.ssh/id_rsa
-
 install:
   - docker-compose -f docker-compose.test.yml build
 
 before_script:
   - docker-compose -f docker-compose.test.yml up -d
-  - docker ps 
   - docker-compose -f docker-compose.test.yml run web bin/rake db:create RAILS_ENV=test
   - docker-compose -f docker-compose.test.yml run web bin/rake db:schema:load RAILS_ENV=test
-
+  - docker-compose down
 script:
   - docker-compose -f docker-compose.test.yml run web bin/rake test
 
